--- a/ElemeCountdown/signup.html
+++ b/ElemeCountdown/signup.html
@@ -10,11 +10,56 @@
 <body>
 <div id="app">
     <h2>用户注册</h2>
-    <el-form ref="form" label-position="right" label-width="80px">
-        <el-form-item label="证件类型">
-            <el-input v-model="form.username"></el-input>
-        </el-form-item>
-    </el-form>
+    <el-card>
+        <div id="step-1">
+            <el-form ref="form" label-position="right" label-width="80px">
+                <el-form-item label="证件类型" required>
+                    <el-select v-model="form.documentType" placeholder="请选择">
+                        <el-option label="公民身份证" value="1"></el-option>
+                        <el-option label="军官证" value="2"></el-option>
+                        <el-option label="护照" value="3"></el-option>
+                    </el-select>
+                </el-form-item>
+                <el-form-item label="证件号码" required>
+                    <el-input v-model="form.documentId"></el-input>
+                </el-form-item>
+                <el-form-item label="用户姓名" required>
+                    <el-input v-model="form.name"></el-input>
+                </el-form-item>
+                <el-form-item label="单位名称" required>
+                    <el-input v-model="form.company"></el-input>
+                </el-form-item>
+                <el-form-item label="职务" required>
+                    <el-input v-model="form.position"></el-input>
+                </el-form-item>
+                <el-form-item label="员工ID" required>
+                    <el-input v-model="form.staffId"></el-input>
+                </el-form-item>
+                <el-form-item label="手机号码">
+                    <el-input v-model="form.mobile"></el-input>
+                </el-form-item>
+                <el-form-item label="固定电话" required>
+                    <el-input v-model="form.tel"></el-input>
+                </el-form-item>
+                <el-form-item label="电子邮箱" required>
+                    <el-input v-model="form.email"></el-input>
+                </el-form-item>
+                <el-form-item label="联系地址" required>
+                    <el-input v-model="form.addr"></el-input>
+                </el-form-item>
+                <el-form-item label="用户类型" required>
+                    <el-select v-model="form.usertype">
+                        <el-option label="普通用户" value="1"></el-option>
+                        <el-option label="仓库管理员" value="2"></el-option>
+                    </el-select>
+                </el-form-item>
+            </el-form>
+        </div>
+    </el-card>
+    <div id="step-2">
+    </div>
+    <div id="step-3">
+    </div>
 </div>
 </body>
 <script src="lib/vue.js"></script>
@@ -47,16 +92,13 @@
         },
         methods: {
             previousStep: function () {
-
             },
             nextStep: function () {
-
             },
-            cancel:function(){
-                window.location.href='./login.html';
+            cancel: function () {
+                window.location.href = './login.html';
             },
-            register:function(){
-
+            register: function () {
             }
         }
     });
