--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -5,57 +5,75 @@
     <title>注册</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
+        body {
+            background: url(res/bg-air.jpg) center top;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
 <div id="app">
-    <h2>用户注册</h2>
-    <el-card>
-        <div id="step-1">
-            <el-form ref="form" label-position="right" label-width="80px">
-                <el-form-item label="证件类型" required>
-                    <el-select v-model="form.documentType" placeholder="请选择">
-                        <el-option label="公民身份证" value="1"></el-option>
-                        <el-option label="军官证" value="2"></el-option>
-                        <el-option label="护照" value="3"></el-option>
-                    </el-select>
-                </el-form-item>
-                <el-form-item label="证件号码" required>
-                    <el-input v-model="form.documentId"></el-input>
-                </el-form-item>
-                <el-form-item label="用户姓名" required>
-                    <el-input v-model="form.name"></el-input>
-                </el-form-item>
-                <el-form-item label="单位名称" required>
-                    <el-input v-model="form.company"></el-input>
-                </el-form-item>
-                <el-form-item label="职务" required>
-                    <el-input v-model="form.position"></el-input>
-                </el-form-item>
-                <el-form-item label="员工ID" required>
-                    <el-input v-model="form.staffId"></el-input>
-                </el-form-item>
-                <el-form-item label="手机号码">
-                    <el-input v-model="form.mobile"></el-input>
-                </el-form-item>
-                <el-form-item label="固定电话" required>
-                    <el-input v-model="form.tel"></el-input>
-                </el-form-item>
-                <el-form-item label="电子邮箱" required>
-                    <el-input v-model="form.email"></el-input>
-                </el-form-item>
-                <el-form-item label="联系地址" required>
-                    <el-input v-model="form.addr"></el-input>
-                </el-form-item>
-                <el-form-item label="用户类型" required>
-                    <el-select v-model="form.usertype">
-                        <el-option label="普通用户" value="1"></el-option>
-                        <el-option label="仓库管理员" value="2"></el-option>
-                    </el-select>
-                </el-form-item>
-            </el-form>
-        </div>
-    </el-card>
+    <el-row>
+        <el-col span="14" offset="5">
+            <el-card>
+                <transition name="el-fade-in">
+                    <div v-show="state===0">
+                        <h2>用户注册</h2>
+                        <el-form ref="form" label-position="right" label-width="80px">
+                            <el-form-item label="证件类型" required>
+                                <el-select v-model="form.documentType" placeholder="请选择">
+                                    <el-option label="公民身份证" value="1"></el-option>
+                                    <el-option label="军官证" value="2"></el-option>
+                                    <el-option label="护照" value="3"></el-option>
+                                </el-select>
+                            </el-form-item>
+                            <el-form-item label="证件号码" required>
+                                <el-input v-model="form.documentId"></el-input>
+                            </el-form-item>
+                            <el-form-item label="用户姓名" required>
+                                <el-input v-model="form.name"></el-input>
+                            </el-form-item>
+                            <el-form-item label="单位名称" required>
+                                <el-input v-model="form.company"></el-input>
+                            </el-form-item>
+                            <el-form-item label="职务" required>
+                                <el-input v-model="form.position"></el-input>
+                            </el-form-item>
+                            <el-form-item label="员工ID" required>
+                                <el-input v-model="form.staffId"></el-input>
+                            </el-form-item>
+                            <el-form-item label="手机号码">
+                                <el-input v-model="form.mobile"></el-input>
+                            </el-form-item>
+                            <el-form-item label="固定电话" required>
+                                <el-input v-model="form.tel"></el-input>
+                            </el-form-item>
+                            <el-form-item label="电子邮箱" required>
+                                <el-input v-model="form.email"></el-input>
+                            </el-form-item>
+                            <el-form-item label="联系地址" required>
+                                <el-input v-model="form.addr"></el-input>
+                            </el-form-item>
+                            <el-form-item label="用户类型" required>
+                                <el-select v-model="form.usertype">
+                                    <el-option label="普通用户" value="1"></el-option>
+                                    <el-option label="仓库管理员" value="2"></el-option>
+                                </el-select>
+                            </el-form-item>
+                            <el-form-item>
+                                <el-row>
+                                    <el-col offset="18">
+                                        <el-button type="primary" @click="nextStep">下一步</el-button>
+                                        <el-button>取消</el-button>
+                                    </el-col>
+                                </el-row>
+                            </el-form-item>
+                        </el-form>
+                    </div>
+                </transition>
+            </el-card>
+        </el-col>
+    </el-row>
     <div id="step-2">
     </div>
     <div id="step-3">
@@ -87,6 +105,9 @@
                         addr: '',
                         coord: ''
                     }
+                },
+                rules:{
+                    
                 }
             }
         },
@@ -94,6 +115,11 @@
             previousStep: function () {
             },
             nextStep: function () {
+                if (this.state === 0) {
+                    this.state = 1;
+                } else if (this.state === 1) {
+                    this.state = 2;
+                }
             },
             cancel: function () {
                 window.location.href = './login.html';
