--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -19,43 +19,43 @@
                 <transition name="el-fade-in">
                     <div v-show="state===0">
                         <h2>用户注册</h2>
-                        <el-form ref="form" label-position="right" label-width="80px">
-                            <el-form-item label="证件类型" required>
-                                <el-select v-model="form.documentType" placeholder="请选择">
+                        <el-form ref="form1" :rules="rules1" :model="form1" label-position="right" label-width="80px">
+                            <el-form-item label="证件类型" prop="documentType" required>
+                                <el-select v-model="form1.documentType" placeholder="请选择">
                                     <el-option label="公民身份证" value="1"></el-option>
                                     <el-option label="军官证" value="2"></el-option>
                                     <el-option label="护照" value="3"></el-option>
                                 </el-select>
                             </el-form-item>
-                            <el-form-item label="证件号码" required>
-                                <el-input v-model="form.documentId"></el-input>
+                            <el-form-item label="证件号码" prop="documentId" required>
+                                <el-input v-model="form1.documentId"></el-input>
                             </el-form-item>
-                            <el-form-item label="用户姓名" required>
-                                <el-input v-model="form.name"></el-input>
+                            <el-form-item label="用户姓名" prop="name" required>
+                                <el-input v-model="form1.name"></el-input>
                             </el-form-item>
-                            <el-form-item label="单位名称" required>
-                                <el-input v-model="form.company"></el-input>
+                            <el-form-item label="单位名称" prop="company" required>
+                                <el-input v-model="form1.company"></el-input>
                             </el-form-item>
-                            <el-form-item label="职务" required>
-                                <el-input v-model="form.position"></el-input>
+                            <el-form-item label="职务" prop="position" required>
+                                <el-input v-model="form1.position"></el-input>
                             </el-form-item>
-                            <el-form-item label="员工ID" required>
-                                <el-input v-model="form.staffId"></el-input>
+                            <el-form-item label="员工ID" prop="staffId" required>
+                                <el-input v-model="form1.staffId"></el-input>
                             </el-form-item>
                             <el-form-item label="手机号码">
-                                <el-input v-model="form.mobile"></el-input>
+                                <el-input v-model="form1.mobile"></el-input>
                             </el-form-item>
-                            <el-form-item label="固定电话" required>
-                                <el-input v-model="form.tel"></el-input>
+                            <el-form-item label="固定电话" prop="tel" required>
+                                <el-input v-model="form1.tel"></el-input>
                             </el-form-item>
-                            <el-form-item label="电子邮箱" required>
-                                <el-input v-model="form.email"></el-input>
+                            <el-form-item label="电子邮箱" prop="email" required>
+                                <el-input v-model="form1.email"></el-input>
                             </el-form-item>
-                            <el-form-item label="联系地址" required>
-                                <el-input v-model="form.addr"></el-input>
+                            <el-form-item label="联系地址" prop="addr" required>
+                                <el-input v-model="form1.addr"></el-input>
                             </el-form-item>
-                            <el-form-item label="用户类型" required>
-                                <el-select v-model="form.usertype">
+                            <el-form-item label="用户类型" prop="usertype" required>
+                                <el-select v-model="form1.usertype">
                                     <el-option label="普通用户" value="1"></el-option>
                                     <el-option label="仓库管理员" value="2"></el-option>
                                 </el-select>
@@ -63,7 +63,7 @@
                             <el-form-item>
                                 <el-row>
                                     <el-col offset="18">
-                                        <el-button type="primary" @click="nextStep">下一步</el-button>
+                                        <el-button type="primary" @click="nextStep('form1')">下一步</el-button>
                                         <el-button>取消</el-button>
                                     </el-col>
                                 </el-row>
@@ -88,7 +88,7 @@
         data: function () {
             return {
                 state: 0,
-                form: {
+                form1: {
                     documentType: '',
                     documentId: '',
                     name: '',
@@ -106,20 +106,63 @@
                         coord: ''
                     }
                 },
-                rules:{
-                    
+                rules1:{
+                    documentType:[
+                        {required:true,message:'请选择证件类型'}
+                    ],
+                    documentId:[
+                        {required:true,message:'请输入证件号码'}
+                    ],
+                    name:[
+                        {required:true,message:'请输入用户姓名'}
+                    ],
+                    company:[
+                        {required:true,message:'请输入单位名称'}
+                    ],
+                    position:[
+                        {required:true,message:'请输入职务'}
+                    ],
+                    staffId:[
+                        {required:true,message:'请输入员工ID'},
+                        {pattern:/^\d+$/,message:'请输入正确的员工ID'}
+                    ],
+                    tel:[
+                        {required:true,message:'请输入固定电话'},
+                        {pattern:/^\d+$/,message:'请输入正确的固定电话'}
+                    ],
+                    email:[
+                        {required:true,message:'请输入电子邮箱'},
+                        {
+                            pattern:/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                            message:'请输入正确的电子邮箱'
+                        }
+                    ],
+                    addr:[
+                        {required:true,message:'请输入联系地址'}
+                    ],
+                    usertype:[
+                        {required:true,message:'请选择用户类型'}
+                    ]
                 }
             }
         },
         methods: {
             previousStep: function () {
             },
-            nextStep: function () {
-                if (this.state === 0) {
-                    this.state = 1;
-                } else if (this.state === 1) {
-                    this.state = 2;
-                }
+            nextStep: function (formName) {
+                this.$refs[formName].validate((valid)=>{
+                    if(valid){
+                        if (this.state === 0) {
+                            this.state = 1;
+                        } else if (this.state === 1) {
+                            this.state = 2;
+                        }
+                    }else{
+                        this.$alert("信息错误，请重新填写。");
+                        return false;
+                    }
+                })
+
             },
             cancel: function () {
                 window.location.href = './login.html';
