--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -27,9 +27,11 @@
                                     <el-option label="护照" value="3"></el-option>
                                 </el-select>
                             </el-form-item>
-                            <el-form-item label="证件号码" prop="documentId" required>
-                                <el-input v-model="form1.documentId"></el-input>
-                            </el-form-item>
+                            <transition name="el-zoom-in-top">
+                                <el-form-item v-show="form1.documentType != ''" label="证件号码" prop="documentId" required>
+                                    <el-input v-model="form1.documentId"></el-input>
+                                </el-form-item>
+                            </transition>
                             <el-form-item label="用户姓名" prop="name" required>
                                 <el-input v-model="form1.name"></el-input>
                             </el-form-item>
@@ -106,42 +108,42 @@
                         coord: ''
                     }
                 },
-                rules1:{
-                    documentType:[
-                        {required:true,message:'请选择证件类型'}
+                rules1: {
+                    documentType: [
+                        {required: true, message: '请选择证件类型'}
                     ],
-                    documentId:[
-                        {required:true,message:'请输入证件号码'}
+                    documentId: [
+                        {required: true, message: '请输入证件号码'}
                     ],
-                    name:[
-                        {required:true,message:'请输入用户姓名'}
+                    name: [
+                        {required: true, message: '请输入用户姓名'}
                     ],
-                    company:[
-                        {required:true,message:'请输入单位名称'}
+                    company: [
+                        {required: true, message: '请输入单位名称'}
                     ],
-                    position:[
-                        {required:true,message:'请输入职务'}
+                    position: [
+                        {required: true, message: '请输入职务'}
                     ],
-                    staffId:[
-                        {required:true,message:'请输入员工ID'},
-                        {pattern:/^\d+$/,message:'请输入正确的员工ID'}
+                    staffId: [
+                        {required: true, message: '请输入员工ID'},
+                        {pattern: /^\d+$/, message: '请输入正确的员工ID'}
                     ],
-                    tel:[
-                        {required:true,message:'请输入固定电话'},
-                        {pattern:/^\d+$/,message:'请输入正确的固定电话'}
+                    tel: [
+                        {required: true, message: '请输入固定电话'},
+                        {pattern: /^\d+$/, message: '请输入正确的固定电话'}
                     ],
-                    email:[
-                        {required:true,message:'请输入电子邮箱'},
+                    email: [
+                        {required: true, message: '请输入电子邮箱'},
                         {
-                            pattern:/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
-                            message:'请输入正确的电子邮箱'
+                            pattern: /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                            message: '请输入正确的电子邮箱'
                         }
                     ],
-                    addr:[
-                        {required:true,message:'请输入联系地址'}
+                    addr: [
+                        {required: true, message: '请输入联系地址'}
                     ],
-                    usertype:[
-                        {required:true,message:'请选择用户类型'}
+                    usertype: [
+                        {required: true, message: '请选择用户类型'}
                     ]
                 }
             }
@@ -150,14 +152,14 @@
             previousStep: function () {
             },
             nextStep: function (formName) {
-                this.$refs[formName].validate((valid)=>{
-                    if(valid){
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
                         if (this.state === 0) {
                             this.state = 1;
                         } else if (this.state === 1) {
                             this.state = 2;
                         }
-                    }else{
+                    } else {
                         this.$alert("信息错误，请重新填写。");
                         return false;
                     }
