--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -19,7 +19,7 @@
                 <transition name="el-fade-in">
                     <div v-show="state===0">
                         <h2>用户注册</h2>
-                        <el-form ref="form1" :rules="rules1" :model="form1" label-position="right" label-width="80px">
+                        <el-form ref="form1" :rules="rules1" :model="form1" label-position="right" label-width="100px">
                             <el-form-item label="证件类型" prop="documentType" required>
                                 <el-select v-model="form1.documentType" placeholder="请选择">
                                     <el-option label="公民身份证" value="1"></el-option>
@@ -56,10 +56,23 @@
                             </el-form-item>
                             <el-form-item label="用户类型" prop="usertype" required>
                                 <el-select v-model="form1.usertype">
-                                    <el-option label="普通用户" value="1"></el-option>
-                                    <el-option label="仓库管理员" value="2"></el-option>
+                                    <el-option label="普通用户" value="common"></el-option>
+                                    <el-option label="仓库管理员" value="admin"></el-option>
                                 </el-select>
                             </el-form-item>
+                            <transition name="el-zoom-in-top">
+                                <div v-show="form1.usertype==='admin'">
+                                    <el-form-item label="仓库编号" prop="repoId" required>
+                                        <el-input v-model="form1.mobile"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="仓库地址" prop="repoAddr" required>
+                                        <el-input v-model="form1.tel"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="仓库经纬度" prop="repoCoord">
+                                        <el-input v-model="form1.email"></el-input>
+                                    </el-form-item>
+                                </div>
+                            </transition>
                             <el-form-item>
                                 <el-row>
                                     <el-col offset="18">
@@ -106,42 +119,42 @@
                         coord: ''
                     }
                 },
-                rules1:{
-                    documentType:[
-                        {required:true,message:'请选择证件类型'}
+                rules1: {
+                    documentType: [
+                        {required: true, message: '请选择证件类型'}
                     ],
-                    documentId:[
-                        {required:true,message:'请输入证件号码'}
+                    documentId: [
+                        {required: true, message: '请输入证件号码'}
                     ],
-                    name:[
-                        {required:true,message:'请输入用户姓名'}
+                    name: [
+                        {required: true, message: '请输入用户姓名'}
                     ],
-                    company:[
-                        {required:true,message:'请输入单位名称'}
+                    company: [
+                        {required: true, message: '请输入单位名称'}
                     ],
-                    position:[
-                        {required:true,message:'请输入职务'}
+                    position: [
+                        {required: true, message: '请输入职务'}
                     ],
-                    staffId:[
-                        {required:true,message:'请输入员工ID'},
-                        {pattern:/^\d+$/,message:'请输入正确的员工ID'}
+                    staffId: [
+                        {required: true, message: '请输入员工ID'},
+                        {pattern: /^\d+$/, message: '请输入正确的员工ID'}
                     ],
-                    tel:[
-                        {required:true,message:'请输入固定电话'},
-                        {pattern:/^\d+$/,message:'请输入正确的固定电话'}
+                    tel: [
+                        {required: true, message: '请输入固定电话'},
+                        {pattern: /^\d+$/, message: '请输入正确的固定电话'}
                     ],
-                    email:[
-                        {required:true,message:'请输入电子邮箱'},
+                    email: [
+                        {required: true, message: '请输入电子邮箱'},
                         {
-                            pattern:/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
-                            message:'请输入正确的电子邮箱'
+                            pattern: /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                            message: '请输入正确的电子邮箱'
                         }
                     ],
-                    addr:[
-                        {required:true,message:'请输入联系地址'}
+                    addr: [
+                        {required: true, message: '请输入联系地址'}
                     ],
-                    usertype:[
-                        {required:true,message:'请选择用户类型'}
+                    usertype: [
+                        {required: true, message: '请选择用户类型'}
                     ]
                 }
             }
@@ -150,14 +163,10 @@
             previousStep: function () {
             },
             nextStep: function (formName) {
-                this.$refs[formName].validate((valid)=>{
-                    if(valid){
-                        if (this.state === 0) {
-                            this.state = 1;
-                        } else if (this.state === 1) {
-                            this.state = 2;
-                        }
-                    }else{
+                this.$refs[formName].validate((valid) => {
+                    if (valid) {
+                        this.state = 1;
+                    } else {
                         this.$alert("信息错误，请重新填写。");
                         return false;
                     }
