完善注册登录
1.解决身份证验证validator中的回调问题
2.页面之间的链接

--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>页面的标题</title>
+    <title>登录</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
         body {
@@ -78,7 +78,7 @@
                                         <el-form-item>
                                             <el-row gutter="20">
                                                 <el-col span="12">
-                                                    <el-button class="full-fill">立即注册</el-button>
+                                                    <a href="signup.html"><el-button class="full-fill">立即注册</el-button></a>
                                                 </el-col>
                                                 <el-col span="12">
                                                     <el-button class="full-fill">找回密码</el-button>
