--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -80,8 +80,10 @@
                                 </div>
                             </transition>
                             <el-form-item>
-                                <el-button type="primary" @click="nextStep('form1')">下一步</el-button>
-                                <el-button>取消</el-button>
+                                <p style="text-align: right">
+                                    <el-button type="primary" @click="nextStep('form1')">下一步</el-button>
+                                    <a href="login.html"><el-button>取消</el-button></a>
+                                </p>
                             </el-form-item>
                         </el-form>
                     </div>
@@ -93,6 +95,10 @@
                             <el-table-column prop="key"></el-table-column>
                             <el-table-column prop="value"></el-table-column>
                         </el-table>
+                        <p style="text-align: right">
+                            <el-button type="primary" @click="register">注册</el-button>
+                            <el-button @click="state=0">取消</el-button>
+                        </p>
                     </div>
                 </transition>
             </el-card>
@@ -136,11 +142,13 @@
                     documentId: [
                         {required: true, message: '请输入证件号码'},
                         {
-                            validator: function(rule, value, callback) {
+                            validator: function (rule, value, callback) {
                                 var idChecker = require('verify-identity-card');
 
-                                if(app.form1.documentType === '1' && !idChecker(value)) {
+                                if (app.form1.documentType === '1' && !idChecker(value)) {
                                     callback(new Error("请输入正确的身份证号"));
+                                } else {
+                                    callback();
                                 }
                             },
                             trigger: 'blur'
@@ -199,10 +207,18 @@
                 })
 
             },
-            cancel: function () {
-                window.location.href = './login.html';
-            },
             register: function () {
+                this.$alert('请耐心等待管理员审核，若审核通过系统将自动为您发送提示邮件！',{
+                    confirmButtonText:'返回首页',
+                    callback:action=>{
+                        this.$message({
+                            type:'info',
+                            message:`action:${action}`
+                        });
+                        window.location.href="./login.html";
+                    }
+                });
+
             }
         },
         computed: {
@@ -214,26 +230,30 @@
                         '2': '军官证',
                         '3': '护照'
                     }[this.form1.documentType],
-                    '用户姓名':this.form1.name,
-                    '单位名称':this.form1.company,
-                    '职务':this.form1.position,
-                    '员工ID':this.form1.staffId,
-                    '手机号码':this.form1.mobile,
-                    '固定电话':this.form1.tel,
-                    '电子邮箱':this.form1.email,
-                    '联系地址':this.form1.addr,
-                    '用户类型':{
-                        'common':'普通用户',
-                        'admin':'仓库管理员'
-                    }[this.form1.usertype],
-                    '仓库编号':this.form1.repoId,
-                    '仓库地址':this.form1.repoAddr,
-                    '仓库经纬度':this.form1.repoCoord
+                    '用户姓名': this.form1.name,
+                    '单位名称': this.form1.company,
+                    '职务': this.form1.position,
+                    '员工ID': this.form1.staffId,
+                    '手机号码': this.form1.mobile,
+                    '固定电话': this.form1.tel,
+                    '电子邮箱': this.form1.email,
+                    '联系地址': this.form1.addr,
+                    '仓库编号': this.form1.repoId,
+                    '仓库地址': this.form1.repoAddr,
+                    '仓库经纬度': this.form1.repoCoord
                 };
 
                 var result = [];
-                for(var i in renderData) {
-                    result.push({key: i, value: renderData[i]});
+                if(this.form1.usertype=='common'){
+                    for(var i in renderData){
+                        if(!i.includes('仓库')){
+                            result.push({key:i,value:renderData[i]});
+                        }
+                    }
+                }else{
+                    for(var i in renderData){
+                        result.push({key:i,value:renderData[i]});
+                    }
                 }
                 return result;
             }
