--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -46,15 +46,15 @@
             background: url(res/bg-ac.jpg) center top;
         }
 
-        #login-card-container{
-            width:850px;
-            position:absolute;
-            right:50%;
+        #login-card-container {
+            width: 850px;
+            position: absolute;
+            right: 50%;
         }
 
-        #login-card-container>#login-card{
-            position:relative;
-            right:-50%;
+        #login-card-container > #login-card {
+            position: relative;
+            right: -50%;
         }
 
     </style>
@@ -72,24 +72,26 @@
                             <div class="spliter"></div>
                             <div id="login-form">
                                 <header>后勤物资<br>多维调度系统</header>
-                                <el-form label-position="right" label-width="80px">
-                                    <el-form-item label="用户名">
+                                <el-form :model="loginForm" ref="loginForm" :rules="rules" label-position="right"
+                                         label-width="80px">
+                                    <el-form-item prop="user" label="用户名" required>
                                         <el-input v-model="loginForm.user"></el-input>
                                     </el-form-item>
-                                    <el-form-item label="密码">
-                                        <el-input v-model="loginForm.pwd"></el-input>
+                                    <el-form-item prop="pwd" label="密码" required>
+                                        <el-input type="password" v-model="loginForm.pwd"
+                                                  auto-complete="off"></el-input>
                                     </el-form-item>
                                     <el-form-item>
-                                        <el-button type="primary" class="full-fill">登录</el-button>
+                                        <el-button type="primary" class="full-fill" @click="loginPost">登录</el-button>
                                     </el-form-item>
                                     <el-form-item>
-                                        <el-row gutter="20">
-                                            <el-col span="12">
+                                        <el-row :gutter="20">
+                                            <el-col :span="12">
                                                 <a href="signup.html">
                                                     <el-button class="full-fill">立即注册</el-button>
                                                 </a>
                                             </el-col>
-                                            <el-col span="12">
+                                            <el-col :span="12">
                                                 <el-button class="full-fill">找回密码</el-button>
                                             </el-col>
                                         </el-row>
@@ -106,17 +108,58 @@
 </div>
 </body>
 <script src="lib/vue.js"></script>
+<script src="lib/jquery.min.js"></script>
 <script src="lib/eleme-index.js"></script>
 <script>
     var app = new Vue({
         el: '#app',
-        data: {
-            loginForm: {
-                user: '',
-                pwd: ''
+        data: function () {
+            return {
+                loginForm: {
+                    user: '',
+                    pwd: ''
+                },
+                rules: {
+                    user: [
+                        {required: true, message: '请输入用户名'}
+                    ],
+                    pwd: [
+                        {required: true, message: '请输入密码'}
+                    ]
+                }
             }
         },
-        methods: {}
+        methods: {
+            loginPost: function(){
+                $.ajax({
+                    type: 'post',
+                    url: '/login',
+                    data: {
+                        name: this.loginForm.user,
+                        password: this.loginForm.pwd
+                    },
+                    beforeSend: function () {
+                        console.log('Prepared');
+                    },
+                    success: (data, result, resultDesp) => {
+                        if (result === 1000) {
+                            window.location.href = 'mainPage.html';
+                        } else {
+                            console.log(resultDesp);
+                            this.$alert('网络错误，请稍后重试');
+                        }
+                    },
+                    complete: function () {
+                        console.log('Done');
+                    },
+                    error: () => {
+                        console.log();
+                        this.$alert('网络错误，请稍后重试');
+                    }
+
+                })
+            }
+        }
     });
 </script>
 </html>
