--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -57,10 +57,10 @@
                             <el-form-item label="员工ID" prop="staffId" required>
                                 <el-input v-model="form1.staffId"></el-input>
                             </el-form-item>
-                            <el-form-item label="手机号码">
+                            <el-form-item label="手机号码" prop="mobile" required>
                                 <el-input v-model="form1.mobile"></el-input>
                             </el-form-item>
-                            <el-form-item label="固定电话" prop="tel" required>
+                            <el-form-item label="固定电话">
                                 <el-input v-model="form1.tel"></el-input>
                             </el-form-item>
                             <el-form-item label="电子邮箱" prop="email" required>
@@ -71,12 +71,12 @@
                             </el-form-item>
                             <el-form-item label="用户类型" prop="usertype" required>
                                 <el-select v-model="form1.usertype">
-                                    <el-option label="普通用户" value="common"></el-option>
-                                    <el-option label="仓库管理员" value="admin"></el-option>
+                                    <el-option label="普通用户" value="user"></el-option>
+                                    <el-option label="仓库管理员" value="manager"></el-option>
                                 </el-select>
                             </el-form-item>
                             <transition name="el-zoom-in-top">
-                                <div v-if="form1.usertype==='admin'">
+                                <div v-if="form1.usertype==='manager'">
                                     <el-form-item label="仓库编号" prop="repoId" required="false">
                                         <el-input v-model="form1.repoId"></el-input>
                                     </el-form-item>
@@ -211,9 +211,9 @@
                         {required: true, message: '请输入员工ID'},
                         {pattern: /^\d+$/, message: '请输入正确的员工ID'}
                     ],
-                    tel: [
-                        {required: true, message: '请输入固定电话'},
-                        {pattern: /^[\d()-]+$/, message: '请输入正确的固定电话'}
+                    mobile: [
+                        {required: true, message: '请输入手机号码'},
+                        {pattern: /^\d{11}$/, message: '请输入正确的手机号码'}
                     ],
                     email: [
                         {required: true, message: '请输入电子邮箱'},
@@ -256,8 +256,9 @@
                     url:'/user/register',
                     data:{
                         userId: this.form1.userId,
+                        realName:this.form1.name,
                         password: this.form1.password,
-                        role: this.form1.usertype,
+                        role:this.form1.usertype,
                         IDType:this.form1.documentType,
                         IDNumber:this.form1.documentId,
                         companyName:this.form1.company,
@@ -324,7 +325,7 @@
                 };
 
                 var result = [];
-                if (this.form1.usertype == 'common') {
+                if (this.form1.usertype == 'user') {
                     for (var i in renderData) {
                         if (!i.includes('仓库')) {
                             result.push({key: i, value: renderData[i]});
